--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: '1.17'
       - name: Testing and Coverage Report
-        run: go test -race -covermode=atomic -coverprofile=coverage.out
+        run: go test -race -covermode=atomic -coverprofile=coverage.out ./...
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
