--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,3 +22,8 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_CODECOV }}
           files: coverage.out
+      - name: Sonarcloud Code Quality
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
