test remove sonar report paths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.organization=dewidyabagus
 sonar.projectKey=dewidyabagus_go-rest-unit-test
-sonar.go.coverage.reportPaths=coverage.out
+# sonar.go.coverage.reportPaths=coverage.out
 sonar.exclusions=main.go,api/routes.go
 sonar.test.exclusions=.github/**
 
