--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,11 +17,11 @@ jobs:
           go-version: '1.17'
       - name: Testing and Coverage Report
         run: go test -race -covermode=atomic -coverprofile=coverage.out ./...
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.TOKEN_CODECOV }}
-          files: coverage.out
+      # - name: Upload Coverage to Codecov
+      #   uses: codecov/codecov-action@v2
+      #   with:
+      #     token: ${{ secrets.TOKEN_CODECOV }}
+      #     files: coverage.out
       - name: Sonarcloud Code Quality
         uses: sonarsource/sonarcloud-github-action@master
         env:
