--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.organization=dewidyabagus
 sonar.projectKey=dewidyabagus_go-rest-unit-test
 sonar.go.coverage.reportPaths=coverage.out
-sonar.exclusions=main.go,api/routes.go,api/**/controller_test.go
-sonar.test.exclusions=.github/**
+sonar.exclusions=main.go,api/routes.go,api/**/controller_test.go,.github/**
+# sonar.test.exclusions=.github/**
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
